commit before reinstall        before0

--- a/frontend/src/assets/scss/argon-design-system-react.scss
+++ b/frontend/src/assets/scss/argon-design-system-react.scss
@@ -70,6 +70,7 @@
 
 @import "custom/accordion.scss";
 @import "custom/alerts.scss";
+@import "custom/animals.scss";
 @import "custom/avatars.scss";
 @import "custom/badge.scss";
 @import "custom/buttons.scss";
